@@ -1,7 +1,5 @@
 package de.teamlapen.werewolves.data;
 
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
 import de.teamlapen.vampirism.world.loot.functions.AddBookNbtFunction;
 import de.teamlapen.vampirism.world.loot.functions.RefinementSetFunction;
 import de.teamlapen.werewolves.api.WReference;
@@ -9,12 +7,15 @@ import de.teamlapen.werewolves.core.ModBlocks;
 import de.teamlapen.werewolves.core.ModEntities;
 import de.teamlapen.werewolves.core.ModItems;
 import de.teamlapen.werewolves.core.ModLootTables;
-import net.minecraft.data.DataGenerator;
-import net.minecraft.data.loot.BlockLoot;
-import net.minecraft.data.loot.EntityLoot;
+import de.teamlapen.werewolves.mixin.VanillaBlockLootAccessor;
+import net.minecraft.data.PackOutput;
+import net.minecraft.data.loot.BlockLootSubProvider;
+import net.minecraft.data.loot.EntityLootSubProvider;
 import net.minecraft.data.loot.LootTableProvider;
+import net.minecraft.data.loot.LootTableSubProvider;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.flag.FeatureFlags;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.storage.loot.LootPool;
 import net.minecraft.world.level.storage.loot.LootTable;
@@ -22,39 +23,26 @@ import net.minecraft.world.level.storage.loot.LootTables;
 import net.minecraft.world.level.storage.loot.ValidationContext;
 import net.minecraft.world.level.storage.loot.entries.EmptyLootItem;
 import net.minecraft.world.level.storage.loot.entries.LootItem;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraft.world.level.storage.loot.predicates.LootItemKilledByPlayerCondition;
 import net.minecraft.world.level.storage.loot.predicates.LootItemRandomChanceCondition;
 import net.minecraft.world.level.storage.loot.predicates.LootItemRandomChanceWithLootingCondition;
 import net.minecraft.world.level.storage.loot.providers.number.ConstantValue;
 import net.minecraft.world.level.storage.loot.providers.number.UniformGenerator;
+import org.jetbrains.annotations.NotNull;
 
 import javax.annotation.Nonnull;
 import java.util.List;
 import java.util.Map;
 import java.util.function.BiConsumer;
-import java.util.function.Consumer;
-import java.util.function.Supplier;
+import java.util.stream.Stream;
 
 public class LootTablesGenerator extends LootTableProvider {
 
     private static final float[] DEFAULT_SAPLING_DROP_RATES = new float[]{0.05F, 0.0625F, 0.083333336F, 0.1F};
 
-
-    public LootTablesGenerator(DataGenerator dataGeneratorIn) {
-        super(dataGeneratorIn);
-    }
-
-    @Nonnull
-    @Override
-    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
-        return ImmutableList.of(
-                Pair.of(ModBlockLootTables::new, LootContextParamSets.BLOCK),
-                Pair.of(ModEntityLootTables::new, LootContextParamSets.ENTITY),
-                Pair.of(InjectLootTables::new, LootContextParamSets.ENTITY),
-                Pair.of(ChestLootTables::new, LootContextParamSets.CHEST)
-        );
+    public LootTablesGenerator(PackOutput output) {
+        super(output, ModLootTables.getLootTables(), List.of(new SubProviderEntry(ModEntityLootTables::new, LootContextParamSets.ENTITY), new SubProviderEntry(ModBlockLootTables::new, LootContextParamSets.BLOCK), new SubProviderEntry(ChestLootTables::new, LootContextParamSets.CHEST), new SubProviderEntry(InjectLootTables::new, LootContextParamSets.ENTITY)));
     }
 
     @Override
@@ -62,9 +50,14 @@ public class LootTablesGenerator extends LootTableProvider {
         map.forEach((resourceLocation, lootTable) -> LootTables.validate(validationtracker, resourceLocation, lootTable));
     }
 
-    private static class ModBlockLootTables extends BlockLoot {
+    private static class ModBlockLootTables extends BlockLootSubProvider {
+
+        protected ModBlockLootTables() {
+            super(VanillaBlockLootAccessor.getEXPLOSION_RESISTANT(), FeatureFlags.REGISTRY.allFlags());
+        }
+
         @Override
-        protected void addTables() {
+        protected void generate() {
             this.add(ModBlocks.TOTEM_TOP_WEREWOLVES_WEREWOLF.get(), LootTable.lootTable());
             this.add(ModBlocks.TOTEM_TOP_WEREWOLVES_WEREWOLF_CRAFTED.get(), createSingleItemTable(de.teamlapen.vampirism.core.ModBlocks.TOTEM_TOP.get()));
             this.dropSelf(ModBlocks.JACARANDA_SAPLING.get());
@@ -96,12 +89,13 @@ public class LootTablesGenerator extends LootTableProvider {
         }
     }
 
-    private static class ModEntityLootTables extends EntityLoot {
-        private ModEntityLootTables() {
+    private static class ModEntityLootTables extends EntityLootSubProvider {
+        protected ModEntityLootTables() {
+            super(FeatureFlags.REGISTRY.allFlags());
         }
 
         @Override
-        protected void addTables() {
+        public void generate() {
             this.add(ModEntities.TASK_MASTER_WEREWOLF.get(), LootTable.lootTable());
             this.add(ModEntities.WEREWOLF_MINION.get(), LootTable.lootTable());
             LootTable.Builder werewolf = LootTable.lootTable()
@@ -164,16 +158,15 @@ public class LootTablesGenerator extends LootTableProvider {
             );
         }
 
-        @Nonnull
         @Override
-        protected Iterable<EntityType<?>> getKnownEntities() {
-            return ModEntities.getAllEntities();
+        protected @NotNull Stream<EntityType<?>> getKnownEntityTypes() {
+            return ModEntities.getAllEntities().stream();
         }
     }
 
-    private static class InjectLootTables implements Consumer<BiConsumer<ResourceLocation, LootTable.Builder>> {
+    private static class InjectLootTables implements LootTableSubProvider {
         @Override
-        public void accept(BiConsumer<ResourceLocation, LootTable.Builder> consumer) {
+        public void generate(BiConsumer<ResourceLocation, LootTable.Builder> consumer) {
             consumer.accept(ModLootTables.villager, LootTable.lootTable()
                     .withPool(LootPool.lootPool().name("liver").setRolls(ConstantValue.exactly(1))
                             .add(LootItem.lootTableItem(ModItems.LIVER.get()).setWeight(1).when(LootItemRandomChanceCondition.randomChance(0.5f)))));
@@ -183,10 +176,10 @@ public class LootTablesGenerator extends LootTableProvider {
         }
     }
 
-    private static class ChestLootTables implements Consumer<BiConsumer<ResourceLocation, LootTable.Builder>> {
+    private static class ChestLootTables implements LootTableSubProvider {
 
         @Override
-        public void accept(BiConsumer<ResourceLocation, LootTable.Builder> consumer) {
+        public void generate(BiConsumer<ResourceLocation, LootTable.Builder> consumer) {
             LootPool.Builder accessories = LootPool.lootPool()
                     .name("accessories")
                     .setRolls(ConstantValue.exactly(1))
